Fixed Top Spacing Added Country Form close #34

--- a/curriculum/src/app/core/contact-support/contact-support.component.scss
+++ b/curriculum/src/app/core/contact-support/contact-support.component.scss
@@ -1,4 +1,11 @@
-/* **************CARD CONTENT**************** */
+/* **************PAGE********** */
+/* *************************** */
+/* ************************** */
+.row{
+  padding-top: 3%;
+}
+
+/* **************CARD CONTENT*********** */
 /* ************************************ */
 /* ************************************ */
 .card {
